--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -244,9 +244,9 @@
 
             <div class=" text-center">
               <button type="submit" class="btn btn-fill" (click)="editClick()"
-                data-dismiss="modal">Submit</button>
+              >Submit</button>
 
-              <button type="button" class="btn btn-fill" data-dismiss="modal">Cancel</button>
+            
 
             </div>
           </div>
