--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -235,12 +235,12 @@
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
-              <div class="input-group">
+              <div class="input-group add-rfp-chk">
                   <input type="checkbox"  name="open_rfp" [(ngModel)]="open_rfp" >
-                      Open Rfp
+                      Open RFP
                  
                   <input type="checkbox"  name="record_added" [(ngModel)]="record_added" >
-                      record_added
+                      Record Added
                 
                 <!-- <mat-form-field>
                   <input matInput placeholder="Open Rfp" name="open_rfp" #updatedopen_rfp />
