--- a/src/app/add-rfp/add-rfp.component.scss
+++ b/src/app/add-rfp/add-rfp.component.scss
@@ -1,7 +1,14 @@
 .btn-primary {
     padding: 0 10px;
     font-size: 13px;
+    margin: 14px 5px;
 }
 .pd-in-0 >div{
     padding: 0
+}
+.add-rfp-chk{
+    padding-top: 10px;
+}
+.add-rfp-chk >input{
+    vertical-align: sub;
 }
