--- a/src/app/edit-rfp/edit-rfp.component.html
+++ b/src/app/edit-rfp/edit-rfp.component.html
@@ -9,7 +9,7 @@
           <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 border" >
             <p class=" modal-v2__main-heading"> {{data.title}}</p>
           </div>
-          <form class="sh-signup-form-fix edit-rfp-form">
+          <form class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sh-signup-form-fix edit-rfp-form">
 
             <div class="col-md-6 col-sm-6">
               <div class="input-group">
