--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -819,7 +819,8 @@ h3 {
     padding: 45px 20px 20px;
     border-radius: 5px;
     text-align: center;
-    min-height: 320px
+    min-height: 320px;
+    cursor: pointer;
 }
 
 .success-for-business .icon-box:hover {
@@ -2190,7 +2191,7 @@ mat-form-field.mat-form-field {
 
 .plan-detail i {
     color: #000;
-    width: 15px;
+    width: 20px;
 }
 
 .plan-detail span {
