--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,6 +6,10 @@
             <form [formGroup]="login" class="login-form-1 sh-signup-form-fix sh">
                 <div class="login-form-1-header">
                     <h3>Sign In to Your Account</h3>
+                    <div class="g-f-login text-center">
+                        <a (click)="signInWithGoogle()"><img src="../../assets/img/icon-facebook.png" alt="img"></a>
+                        <a (click)="signInWithFB()"><img src="../../assets/img/icon-Google.png" alt="img"></a>
+                    </div>
                 </div>
                 <div class="card-content mrgn-20-0-0">
                     <div class="form-group label-floating" [ngClass]="displayFieldCss(login, 'username')">
@@ -43,13 +47,13 @@
 
                     <div class="form-footer ">
                         <div class="form-group text-center">
-                            <button type="submit" class="btn btn-rose btn-fill btn-wd sh-signin-btn" (click)="onLogin()">Signin
+                            <button type="submit" class="btn btn-rose btn-fill btn-wd sh-signin-btn" (click)="onLogin()">Sign in
                             </button>
                         </div>
                         <div class="form-group ">
                             <div class="col-sm-6 padding-0">
                                 <span class="no_account">No Account Yet?
-                                    <a routerLink="/sign-up">Signup</a>
+                                    <a routerLink="/sign-up">Sign up</a>
                                 </span>
                             </div>
                             <div class="forgot_pas col-sm-6 padding-0">
@@ -66,7 +70,7 @@
                        
                     </div>
                     <div class="other-logins ">
-                            <button (click)="signInWithFB()" class="btn btn-rose btn-fill btn-wd s-l-fb">
+                            <!-- <button (click)="signInWithFB()" class="btn btn-rose btn-fill btn-wd s-l-fb">
                                 <i class="fa fa-facebook"></i>
                                 <span> Facebook</span>
                             </button>
@@ -74,9 +78,9 @@
                                 <i class="fa fa-google"></i>
                                 <span> Google</span>
                             </button>
-                            <br>
+                            <br> -->
                             <div class="term-privacy text-center">
-                                <a [routerLink]="['/terms']">Terms of Service </a>
+                                <a [routerLink]="['/terms']">Terms of Use </a>
                                 <a [routerLink]="['/privacy-policy']">Privacy Policy</a>
                             </div>
                         </div>
