--- a/src/app/recapcha/recapcha.component.scss
+++ b/src/app/recapcha/recapcha.component.scss
@@ -1,1 +1,43 @@
-.recapcha-input{margin:8px 0 0;background:#fff;padding:4px;border-radius:5px;font-size:18px;border:2px inset}.card{width:170px;margin:0;padding:8px;background:#f2f2f2}.refrash-button{background:#000;border:none;color:#fff;border-radius:5px;width:18%;float:right;margin-top:4px}.refrash-button .mat-icon{line-height:inherit;font-size:25px!important;width:auto;height:auto}.main img{width:80%;float:left;border-radius:5px}
+.recapcha-input {
+    margin: 8px 0 0;
+    background: #fff;
+    padding: 4px;
+    border: none;
+    width: 100%;
+    font-size: 18px !important;
+    border-bottom: 1px solid #ccc;
+}
+
+.card {
+    width: 170px;
+    margin: 0;
+    padding: 8px;
+    background: #ffffff;
+}
+
+.refrash-button {
+    background: #000;
+    border: none;
+    color: #fff;
+    border-radius: 50px;
+    width: 30px;
+    float: right;
+    height: 30px;
+    margin-top: 4px;
+    line-height: 20px;
+}
+
+.refrash-button .mat-icon {
+    line-height: inherit;
+    font-size: 25px!important;
+    width: auto;
+    height: auto
+}
+
+.main img {
+    width: 80%;
+    float: left;
+    border-radius: 5px
+}
+
+
