--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -55,13 +55,17 @@
       </div>
       <div class="col-md-4">
         <div class="contact-address">
+
+           
+           
+
           <h2>HEADQUARTERS</h2>
-          <h5 >5050 Quorum Drive,
-            Dallas, TX 75254, USA</h5>
+          <h5 > 14681 Midway Rd Ste 200
+              Addison TX 75001</h5>
           <h2>ESTABLISH CONTACT</h2>
           <h5 class="phone-contact">
             <i class="fa fa-envelope-o"></i>&nbsp;&nbsp;<span>Email: </span> contact@rfpgurus.com<br>
-            <i class="fa fa-phone"></i>&nbsp;&nbsp; <span>Voice: </span> +1 (888) 764-0100<br>
+            <i class="fa fa-phone"></i>&nbsp;&nbsp; <span>Voice: </span>  +1-972-885-0940<br>
             <i class="fa fa-fax"></i>&nbsp;&nbsp; <span>Fax: </span> +1 (469) 250-6600
           </h5>
         </div>
