--- a/src/app/recapcha/recapcha.component.html
+++ b/src/app/recapcha/recapcha.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card-recap">
     <div class="main">
         <img [src]="imgName">
         <button class="refrash-button" type="button" (click)="resetImg()" mat-icon-button>
