--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,13 +32,15 @@
                         </mat-form-field>
                     </div>
                     <div class="form-group">
-                        <div class="checkbox col-sm-6 padding-0">
+                        <div class="checkbox col-sm-6 padding-0 dp-inline">
                             <label>
                                 <input type="checkbox" value="" name="remember" checked> Keep me logged in
                             </label>
                         </div>
-
-                        <app-recapcha></app-recapcha>
+                       
+                            <app-recapcha class="dp-inline"></app-recapcha>
+                        
+                        
                         <!-- <div class="error-block" *ngIf="isequal==false">
                             <span>*Please Enter Valid Answer</span>
                         </div> -->
