--- a/src/app/recapcha/recapcha.component.scss
+++ b/src/app/recapcha/recapcha.component.scss
@@ -11,8 +11,10 @@
 .card-recap {
     width: 170px;
     margin: 0;
+    border-radius: 5px;
     padding: 8px;
     background: #ffffff;
+    box-shadow: 0px 3px 10px #ccc;
 }
 
 .refrash-button {
