--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -332,7 +332,7 @@
         </li>
         <li *ngIf="!check_login() && !check_adminlogin()" class="">
           <a routerLink="/sign-up" routerLinkActive="Active">
-            <i class="fa fa-unlock" aria-hidden="true"></i>
+            <i class="fas fa-user-alt" aria-hidden="true"></i>
             Sign up
           </a>
         </li>
