--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -34,7 +34,8 @@
                     <div class="form-group">
                         <div class="checkbox col-sm-6 padding-0 dp-inline">
                             <label>
-                                <input type="checkbox" value="" name="remember" checked> Keep me logged in
+                                <input type="checkbox" value="" name="remember" checked>
+                                <b>Stay Signed in</b>
                             </label>
                         </div>
                        
@@ -58,7 +59,7 @@
                                     <a routerLink="/sign-up">Sign up</a>
                                 </span>
                             </div>
-                            <div class="forgot_pas col-sm-6 padding-0">
+                            <div class="forgot_pas col-sm-6 padding-0 text-right">
                                 <label>
                                     <a  (click)="foremail()">Forgot
                                         your password?</a>
