--- a/src/app/registered/registered.component.html
+++ b/src/app/registered/registered.component.html
@@ -141,9 +141,9 @@
                       </mat-error>
                     </mat-form-field>
 
-                    <div *ngIf="emailexist && register.controls.email.value !='' " class="alert alert-danger">
-                      This email already exist.
-                    </div>
+                    <p *ngIf="emailexist && register.controls.email.value !='' " class="clr_red">
+                      This email already exists.
+                    </p>
                   </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" >
@@ -158,9 +158,9 @@
                         Invalid Username
                       </mat-error>
                     </mat-form-field>
-                    <div *ngIf="usernameexist && register.controls.username.value != ''" class="alert alert-danger">
-                      This username already exist.
-                    </div>
+                    <p *ngIf="usernameexist && register.controls.username.value != ''" class="clr_red">
+                      This username already exists.
+                    </p>
                   </div>
                 </div>
 
@@ -196,15 +196,16 @@
               </div>
 
 
-              <div class="form-footer col-sm-12 col-xs-12 col-lg-12">
-                  <div class="form-group col-sm-3 col-md-2 col-xs-12">
+              <div class="form-footer col-sm-12 col-xs-12 col-lg-12 padding-0">
+                  <div class="form-group col-sm-3 col-md-2 col-xs-12 padding-0 pd-left-0">
                       <app-recapcha class="recaptcha-style"></app-recapcha>
                   </div>
                   <div class="form-group pd-left-30 text-left col-sm-9 col-md-10 col-xs-12">
                       <div class="checkbox padding-0">
                           <label>
                               <input type="checkbox" value="" name="remember" checked>
-                              I have read and agree    <a class="vt-middle" [routerLink]="['/terms']" target="_blank">Terms of Use </a>and
+                              I have read and agree  
+                                <a class="vt-middle" [routerLink]="['/terms']" target="_blank">Terms of Use </a>and
                               <a class="vt-middle" [routerLink]="['/privacy-policy']" target="_blank"> Privacy Policy.</a>
                           </label>
                       </div>
